fixeing the style

--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
 <body>
   <header>
    
-    <h3>hi , my name is danyo abie , and i have motivation to coding. </h3>
-    <div class="links">
-      <a href="#">Github</a>
-      <a href="#">Resume</a>
-      <p class="about-me"><b> About Me:</b> my name i's danyo , i'm from petah tikva , i'm 22 years old . <br>
+    <h3 class="header-title">hi , my name is danyo abie , and i have motivation to coding. </h3>
+    <div class="info">
+      <p class="about_me"><b> About Me:</b> my name i's danyo , i'm from petah tikva , i'm 22 years old . <br>
         i'm learning coding by my self.
       </p>
       <p class="skills">
