--- a/index.html
+++ b/index.html
@@ -4,65 +4,47 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css"/>
-  <link href="https://fonts.googleapis.com/css?family=Roboto|Sofia" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+ <script src="https://kit.fontawesome.com/fbbcc5b053.js" crossorigin="anonymous"></script>
 
 
   <title>portfolio</title>
 </head>
 <body>
-  <header>
-    <section class="logo">
-      <h3>danyo abie</h3>
-    </section>
-    <section class="nav-links">
-      <ul>
-        <li><a href="#">בית</a></li>
-        <li><a href="#">אודות</a></li>
-        <li><a href="#">עבודות</a></li>
-      </ul>
-    </section>
-  </header>
-  <main>
-    <section class="about-me">
-      <div class="aboutme-text" >
-        <p>
-        היי, אני דניו, בן 21, מפתח שאוהב לפתור בעיות ולכתוב קוד. אני לומד תכנות באופן עצמאי, עם סקרנות בלתי נגמרת ורצון תמידי להשתפר. בונה פרויקטים, מתנסה בטכנולוגיות חדשות, ותמיד מחפש את האתגר הבא.
-      </p>
-      </div>
-      <div class="aboutme-image" >
-        <img src="images/danyo.jpg" alt="bloger image">
-      </div>
-    </section>
-    <section class="projects">
-      <div><h3>Projects</h3></div>
-      <div class="project-gallery">
-        <div>
-          <img src="images/item-lister.png" alt="item lister app">
-        </div>
-        <div><img src="images/quiz-game.png" alt="quiz game"></div>
-        <div> <img src="images/weather-app.png" alt="weather app"></div>
-        <div class="projects-info">
-          <p>
-            1.item lister app <br>
-            2.quiz game <br>
-            3.weather app
-           </p>
-
+  <nav class="navbar">
+    <a href="#" class="logo">Danyo Abie</a>
+    <ul>
+      <li class="active" ><a href="#">בית</a></li>
+      <li><a href="#">פורטפוליו</a></li>
+      <li><a href="#">אודות</a></li>
+      <li><a href="#">שרות</a></li>
+      <li><a href="#">יצירת קשר</a></li>
+    </ul>
+  </nav>
+  <section class="home">
+    <div class="home-info">
+      <h1>danyo abie</h1>
+      <h2>
+       I am  Frontend developer
+      </h2>
+      <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae porro harum sint velit delectus asperiores mollitia unde nam praesentium dicta sunt modi dolore adipisci quae, iste optio voluptates autem quas.</p>
+      <div class="btn-sci">
+        <a href="#" class="btn">Download CV</a>
+        <div class="sci">
+          <a href="#"><i class="fa-brands fa-github"></i></a>
+          <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
         </div>
       </div>
-    </section>
-  </main>
-  <footer>
-    <div class="footer-links">
-      <ul>
-        <li><a href="#">בית</a></li>
-        <li><a href="#">אודות</a></li>
-        <li><a href="#">עבודות</a></li>
-      </ul>
     </div>
-     <section class="footer-logo">
-      <h3>danyo abie</h3>
-    </section>
-  </footer>
+    <div class="home-img">
+      <div class="img-box">
+        <div class="img-item">
+          <img src="images/danyo-removebg.png" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
