--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
       <li><a href="#">יצירת קשר</a></li>
     </ul>
   </nav>
+  <bar class="bars-animation">
+    <div class="bar"style="--i:6;"></div>
+    <div class="bar"style="--i:5;"></div>
+    <div class="bar"style="--i:4;"></div>
+    <div class="bar"style="--i:3;"></div>
+    <div class="bar"style="--i:2;"></div>
+    <div class="bar"style="--i:1;"></div>
+  </bar>
+  
+
   <section class="home">
     <div class="home-info">
       <h1>danyo abie</h1>
