finshing the project

--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
     <div class="home-info">
       <h1>danyo abie</h1>
       <h2>
-       I am  Frontend developer
+       I am 
+       <span style="--i:4"data-text="Fronted Developer">Fronted Developer</span>
+       <span style="--i:3"data-text="Youtuber">Youtuber</span>
+       <span style="--i:2"data-text="bloger">bloger</span>
+       <span style="--i:1"data-text="designer">designer</span>
       </h2>
       <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae porro harum sint velit delectus asperiores mollitia unde nam praesentium dicta sunt modi dolore adipisci quae, iste optio voluptates autem quas.</p>
       <div class="btn-sci">
